2005-12-16 Perry
 PATCH: [ 1380083 ] Fix EditBinaryFiles Plugin BuildTmp paths
  Plugins\src_VCPP\EditBinaryFiles: EditBinaryFiles.dsp

2005-12-16 Kimmo
 PATCH: [ 1381975 ] Don't open Open-dialog outside screen
  Src: MainFrm.cpp OpenDlg.cpp
  Src removed file: multimon.h

2005-12-16 Perry
 BUG: [ 1380019 ] Bulgarian translation has wrong language id
  Src/Languages/Bulgarian: MergeBulgarian.rc
 PATCH: [ 1382131 ] English rc file has numbers instead of symbols for language
  Src: Merge.rc
 PATCH: [ 1379227 ] Fix ExpatLibs BuildTmp paths
  Src/ExpatLib: expat_static.dsp
  Src/ExpatMapLib: expat_maps_static.dsp
 PATCH: [ 1379228 ] Fix Merge7zInstaller BuildTmp paths
  Merge7zInstaller: Merge7zInstaller.dsp

2005-12-16 Kimmo
 PATCH: [ 1381935 ] Simplify DirView icon loading
  Src: DirView.cpp

2005-12-16 Jochen
 BUG: [ 1382021 ] Merge7z432 missing?
  Merge7z new files: Merge7z431.dsp Merge7z432.dsp

2005-12-15 Perry
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Some more synchronizing from submitted patch
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1379226 ] Fix Display Plugins BuildTmp paths
  (See plugins)  
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Last updates from submitted patch
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 BUG: [ 1381879 ] Unused variable in unicoder.cpp
  Src/common: unicoder.cpp

2005-12-14 Perry
 Update & synchronize translations: ChineseTraditional Czech Danish Dutch
  Src/Languages:
  ChineseTraditional: MergeChineseTraditional.rc
  Czech: MergeCzech.rc
  Danish: MergeDanish.rc
  Dutch: MergeDutch.rc
 Update & synchronize translations: French German Hungarian Italian Japanese
  Src/Languages:
  French: MergeFrench.rc
  German: MergeGerman.rc
  Hungarian: MergeHungarian.rc
  Italian: MergeItalian.rc
  Japanese: MergeJapanese.rc

2005-12-13 Perry
 PATCH: [ 1379894 ] Fix handling of unknown encoding
  Src: MainFrm.cpp